fixed PlaylistHeader background and sideButton opacity on mobile

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -32,6 +32,7 @@
 }
   
 .MainView {
+    background-color: var(--clr-playlist-background);
     overflow: scroll;
     vertical-align: baseline;
     grid-area: mainView;
