--- a/styles/PlaylistHeader.module.css
+++ b/styles/PlaylistHeader.module.css
@@ -50,15 +50,8 @@
 
 
 .playlistHeader {
-    background-color:var(--clr-background);
-    background-image: linear-gradient(
-        0deg,
-        rgb(255, 255, 255, 0.1) 0%,
-        hsl(273deg 19% 19%) 88%,
-        rgba(83, 61, 102, 0.294) 98%,
-        rgba(157, 110, 201, 0.217) 101%,
-        rgba(198, 138, 255, 0.047) 100%
-      );
+    /* --background-noise: rgba(0, 0, 255, 0.411); */
+    background: linear-gradient(to bottom, transparent 0, var(--clr-playlist-background) 100%), #9131ff2c;
 }
 
 .playlistImage {
